--- a/iot_jsp/WebContent/WEB-INF/web.xml
+++ b/iot_jsp/WebContent/WEB-INF/web.xml
@@ -9,10 +9,15 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
-  	
   
+  <servlet>
+  	<servlet-name>UserServlet</servlet-name>
+  	<servlet-class>com.test.iot.servlet.UserServlet</servlet-class>  
   </servlet>
   
+  <servlet-mapping>
+  	<servlet-name>UserServlet</servlet-name>
+  	<url-pattern>*.do</url-pattern>  
+  </servlet-mapping>  
   
 </web-app>
