--- a/iot_jsp/WebContent/WEB-INF/web.xml
+++ b/iot_jsp/WebContent/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>/WEB-INF/view/index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
@@ -17,7 +17,14 @@
   
   <servlet-mapping>
   	<servlet-name>UserServlet</servlet-name>
-  	<url-pattern>*.do</url-pattern>  
-  </servlet-mapping>  
+  	<url-pattern>/user/*</url-pattern>  
+  </servlet-mapping> 
+  
+  <resource-ref>
+  	<description>DB Connection</description>
+  	<res-ref-name>jdbc/IOT</res-ref-name>  	
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>  
+  </resource-ref>   
   
 </web-app>
