--- a/iot_jsp/WebContent/WEB-INF/web.xml
+++ b/iot_jsp/WebContent/WEB-INF/web.xml
@@ -20,6 +20,11 @@
   	<url-pattern>/user/*</url-pattern>  
   </servlet-mapping> 
   
+  <servlet-mapping>
+  	<servlet-name>UserServlet</servlet-name>
+  	<url-pattern>/class/*</url-pattern>  
+  </servlet-mapping> 
+  
   <resource-ref>
   	<description>DB Connection</description>
   	<res-ref-name>jdbc/IOT</res-ref-name>  	
